[package]
name = "pu-239"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/zygomedia/pu-239"
description = "serverside fns in the client"
authors = ["Zygo Media <contact@zygomedia.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "2", features = ["visit", "visit-mut", "full", "extra-traits"] }
