[package]
name = "pu-239"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/zygomedia/pu-239"
description = "serverside fns in the client"
authors = ["Zygo Media <contact@zygomedia.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "2", features = ["visit", "full", "extra-traits", "parsing", "proc-macro", "printing", "clone-impls"], default-features = false }
log = { version = "0.4", optional = true  }

[features]
trace = ["log"]
